--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-config": "^1.5.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
@@ -59,6 +60,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
+    "supabase": "^1.176.10",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
