--- a/package.json
+++ b/package.json
@@ -15,31 +15,38 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.24.7",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/plugin-transform-optional-catch-binding": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.7",
     "@expo/vector-icons": "^14.0.0",
+    "@npmcli/fs": "^3.1.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.0.2",
-    "@supabase/supabase-js": "^2.43.4",
+    "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-query": "^5.40.1",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.11",
-    "expo": "~51.0.8",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.5",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.16",
     "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "lru-cache": "^10.2.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-config": "^1.5.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -50,17 +57,22 @@
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "dotenv": "^16.4.5",
+    "expo": "^51.0.14",
+    "glob": "^10.4.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
-    "supabase": "^1.176.10",
+    "rimraf": "^5.0.7",
+    "supabase": "^1.178.2",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
