--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "native-course",
     "version": "1.0.0",
     "orientation": "portrait",
-    // "icon": ".src/assets/images/icon.png",
+    "icon": ".src/assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -26,10 +26,21 @@
       "output": "static",
       "favicon": "./src/assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-secure-store"],
+    "plugins": [
+      "expo-router",
+      "expo-secure-store"
+    ],
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "ab3e6e29-785f-4c9e-86d1-cc8205d4f3eb"
+      }
     }
   }
 }
