--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "0.37.2",
     "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-query": "^5.40.1",
     "base64-arraybuffer": "^1.0.2",
@@ -34,10 +35,10 @@
     "expo-crypto": "~13.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.5",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-picker": "~15.0.6",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-secure-store": "~13.0.1",
+    "expo-router": "~3.5.17",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -58,6 +59,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "stripe": "^16.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -66,10 +68,10 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.14",
+    "expo": "~51.0.17",
     "glob": "^10.4.2",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.2",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "rimraf": "^5.0.7",
     "supabase": "^1.178.2",
